# python_selenium_pom

./: pyproject.toml
tests/: base_test.py  conftest.py  test_fixtures.py
tests/application_tests/: first_login_test.py
utilities/: driver_factory.py  file_utils.py  screenshot_utils.py  test_config.py  test_config.yaml
