[tool.poetry]
name = "python-selenium-pom"
version = "0.1.0"
description = ""
authors = ["Muthu <muthukrishnanmce@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.14.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

