[tool.poetry]
name = "python-selenium-pom"
version = "0.1.0"
description = ""
authors = ["Muthu <muthukrishnanmce@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.14.0"
pyyaml = "^6.0.1"
webdriver-manager = "^4.0.1"
pytest = "^7.4.2"
pytest-rerunfailures = "^12.0"

[tool.pytest.ini_options]
addopts = "--reruns 3 --reruns-delay 2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

